Add zgc jvm args for ZGC garbage collector.