@@ -18,6 +18,7 @@ dependencies {
 application {
     mainClass.set("kt225.game.ApplicationKt")
     applicationDefaultJvmArgs += listOf(
+        "-XX:+UseZGC",
         "-Djava.library.path=$rootDir/common/src/main/resources/"
     )
 }
